MICS-14730 Fix feed card name
In a feed card, when the feed name is too long, the three dots
for the menu are pushed so that they can't be reached. This commit
fixes that problem with a max-width and the use of ...

--- a/app/react/src/styles/common/feed_card.less
+++ b/app/react/src/styles/common/feed_card.less
@@ -11,6 +11,8 @@
 
     margin-bottom: 30px;
     .mcs-feedCard_topMenu {
+      display: flex;
+      justify-content: flex-end;
       .mcs-icon {
         margin-right: 0;
       }
@@ -44,6 +46,7 @@
           white-space: nowrap;
           overflow: hidden;
           text-overflow: ellipsis;
+          max-width: 99%;
         }
         .mcs-feed-name_placeholder {
           height: 22px;
